test(Lotto): Lotto.toString()을 테스트하는 코드 구현